--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+
     {% block head %}
     {% endblock %}
 </head>
 <body>
-    {% block body %}
-    {% endblock %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">{{ config['SITE_TITLE'] }}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            {% for item in navbar %}
+            {% if item.sublinks %}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ item.text }}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {% for sublink in item.sublinks %}
+                    <a class="dropdown-item" href="{{ sublink.url }}">{{ sublink.text }}</a>
+                    {% endfor %}
+                </div>
+            </li>
+            {% elif item.url %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ item.url }}">{{ item.text }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</nav>
+{% block body %}
+{% endblock %}
 </body>
 </html>
