Experimenting with htmx

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,135 +1,10 @@
-body {
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 10px;
-    flex-direction: column;
-
-}
-
-form {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-form[id="query-form"]{
-    width: 50%;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-label, input[type="submit"] {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-    margin-bottom: 10px;
-}
-
-label[for="file"] {
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-}
-
-label[for="file"]:hover {
-    background-color: #0056b3;
-}
-
-input[type="submit"] {
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-}
-
-input[type="submit"]:hover {
-    background-color: #218838;
-}
-
-#message_upload, #message_vectorize{
+div[class='units']{
     margin-top: 20px;
-    font-size: 16px;
-    color: #333;
-    clear: both;
-}
-
-#uploaded{
-    margin-top: 20px;
-    font-size: 16px;
-    color: #333;
-    clear: both;
-}
-
-h2{
-    font-size:18px;
-}
-
-#chat-log {
-    border: 1px solid #ccc;
-    padding: 10px;
-    height: calc(100vh - 100px); /* Adjust height to leave space for the form */
-    overflow-y: scroll;
     margin-bottom: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.user-query, .message-response {
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 8px;
-    max-width: 80%;
-    word-wrap: break-word;
-}
-
-.user-query {
-    background-color: #e1ffc7;
-    align-self: flex-end;
-    color: black;
-}
-
-.message-response {
-    background-color: #f1f1f1;
-    align-self: flex-start;
-    color: black;
-}
-
-form[id="query-form"] {
-    display: flex;
-    align-items: center;
-    background: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
-}
-
-textarea[id="query-text"] {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: none;
-    font-size: 16px;
-}
-
-input[type="submit"] {
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    margin-left: 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-input[type="submit"]:hover {
-    background-color: #218838;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    background-color: #f0f0f0;
 }
