--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -44,6 +44,6 @@
 {% block body %}
 {% endblock %}
 </body>
-<!--<script src="/app/scripts/htmx.min.js"></script>-->
+<!--<script src="/flask_app/scripts/htmx.min.js"></script>-->
 <script src="{{url_for('static', filename='scripts/htmx.min.js')}}"></script>
 </html>
