--- a/flask_app/static/css/main.css
+++ b/flask_app/static/css/main.css
@@ -5,8 +5,7 @@ body {
     font-family: Arial, sans-serif;
 }
 div[class='units']{
-    /*width: 100%;*/
-    padding: 10px;
+    padding: 5px;
     overflow-y: auto;
     border: 1px solid #000000;
     border-radius: 10px;
@@ -15,9 +14,12 @@ div[class='units']{
 }
 
 #model-container{
-    display:flex;
-    justify-content: flex-start;
-
+    flex: auto;
+    display: flex;
+    flex-direction: row;
+    /*justify-content: flex-end;*/
+    margin: auto;
+    height: min-content;
 }
 #model-details, #pull-models, #current-model, #switch-model{
     margin:10px;
@@ -28,54 +30,48 @@ div[class='units']{
 }
 
 #chat-log {
-    margin: 10px;
-    flex-grow: 1;
-    overflow-y: auto;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #f9f9f9;
 
+    /*flex-grow: 1;*/
+    overflow-y: auto;
+    padding: 1px;
+    border-radius: 10px;
 }
 
 .user-query, .chatbot-response {
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 10px;
+    margin: 5px 10px 5px 10px;
+    padding: 1px;
 }
 
 .user-query {
-    background-color: #d1e7dd;
-    align-self: flex-end;
+    text-align: right;
 }
 
 .chatbot-response {
-    background-color: #f8d7da;
-    align-self: flex-start;
+    text-align: left;
 }
 
 #query-form {
-    margin: 10px;
+    margin: 10px 10px;
+    display:flex;
     flex-direction: column;
+    bottom:0;
 }
 
 #query-text {
-    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 input[type="submit"] {
-    padding: 10px;
-    border: none;
+    padding: 5px;
+    /*border: none;*/
     border-radius: 10px;
     background-color: #007bff;
     color: white;
     cursor: pointer;
-    width: 100%;
+
 }
 
 input[type="submit"]:hover {
