--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -45,5 +45,6 @@
 {% endblock %}
 </body>
 <!--<script src="/flask_app/scripts/htmx.min.js"></script>-->
-<script src="{{url_for('static', filename='scripts/htmx.min.js')}}"></script>
+<script src="{{url_for('static', filename='scripts/htmx.min.js')}}">
+</script>
 </html>
