--- a/flask_app/static/css/main.css
+++ b/flask_app/static/css/main.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     height: 100vh;
     font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 div[class='units']{
     padding: 5px;
@@ -29,36 +30,43 @@ div[class='units']{
 }
 
 #chat-log {
+    flex: 1;
+    max-height: 85vh;
     overflow-y: auto;
-    padding: 1px;
     border-radius: 10px;
+    display: inline-block;
+    padding: 5px 5px 10px;
 }
 
 .user-query, .chatbot-response {
     margin: 5px 10px 5px 10px;
-    padding: 1px;
+    padding: 7px;
 }
 
 .user-query {
-    text-align: right;
+    background-color: #f0f0f0;
+    color: #333;
+    border-radius: 15px;
 }
 
-.chatbot-response {
-    text-align: left;
-}
 
 #query-form {
-    margin: 10px 10px;
+    max-height: 15vh;
+    position: fixed;
+    width: 100%;
+    margin: 0;
     display:flex;
     flex-direction: column;
     bottom:0;
+    z-index: 1000;
 }
 
 #query-text {
+    width: calc(100% - 20px);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    margin-bottom: 5px;
+    margin: 10px;
 }
 
 input[type="submit"] {
