--- a/flask_app/templates/chat.html
+++ b/flask_app/templates/chat.html
@@ -5,36 +5,30 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css') }}">
 {% endblock %}
 
-{% block body %}
-
-
+{% block content %}
 <div id="chat-log">
-
 </div>
 <form hx-on::after-request="if(event.detail.successful) this.reset()"
-  hx-post="/query"
-  hx-target="#chat-log"
-  hx-swap="beforeend"
-  hx-validate="true"
-  id="query-form"
-  hx-trigger="keydown[key=='Enter'&&!shiftKey]:submit"
-  hx-on:keydown="(event.keyCode==13&&!event.shiftKey)?event.preventDefault():null"
+      hx-post="/query"
+      hx-target="#chat-log"
+      hx-swap="beforeend"
+      hx-validate="true"
+      id="query-form"
+      hx-trigger="keydown[key=='Enter'&&!shiftKey]:submit"
+      hx-on:keydown="(event.keyCode==13&&!event.shiftKey)?event.preventDefault():null"
 >
-<label for="query-text"></label>
-<textarea id="query-text" name="query" placeholder="Enter your query here..."
-          onkeyup="this.setCustomValidity('')"
-          hx-on:htmx:validation:validate="if(this.value==''){
+    <label for="query-text"></label>
+    <textarea id="query-text" name="query" placeholder="Enter your query here..."
+              onkeyup="this.setCustomValidity('')"
+              hx-on:htmx:validation:validate="if(this.value==''){
             this.setCustomValidity('Please enter a query');
             htmx.find('#query-form').reportValidity()
           }"
-></textarea>
-<!--    <input type="submit" value="Submit" hidden/>-->
+    ></textarea>
 </form>
 
 
-
 <script>
-
     document.addEventListener('DOMContentLoaded', function () {
         const sessionID = localStorage.getItem('sessionID') || generateSessionID();
         localStorage.setItem('sessionID', sessionID);
@@ -62,6 +56,16 @@
     function generateSessionID() {
         return Math.random().toString(36).substring(2, 15) + Math.random().toString(36).substring(2, 15);
     }
+
+    document.addEventListener("DOMContentLoaded", function () {
+        fetch('/view-chats').then(
+            response => response.json())
+            .then(data => {
+                    console.log(data)
+                }
+            )
+    })
+
 </script>
 {% endblock %}
 
