--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="units">
     <h5>Upload Files</h5>
     <form id="upload-form"
