--- a/flask_app/templates/models.html
+++ b/flask_app/templates/models.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css') }}">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <div id="model-container">
     <div id="model-details">
         <h5>Model Downloaded</h5>
