--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<!--    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>-->
+    <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
     <script src="{{url_for('static', filename='scripts/htmx.min.js')}}"></script>
 
     {% block head %}
@@ -15,12 +15,11 @@
 <div class="d-flex" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="list-group list-group-flush">
-            <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+            {% for item in sidebar %}
+            {% if item.url %}
+            <a class="list-group-item list-group-item-action bg-light" href="{{ item.url }}">{{ item.text }}</a>
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
 
@@ -28,28 +27,8 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-            <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-                    <ul class="navbar-nav mr-auto">
-            {% for item in navbar %}
-            {% if item.sublinks %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    {{ item.text }}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {% for sublink in item.sublinks %}
-                    <a class="dropdown-item" href="{{ sublink.url }}">{{ sublink.text }}</a>
-                    {% endfor %}
-                </div>
-            </li>
-            {% elif item.url %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ item.url }}">{{ item.text }}</a>
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
+            <button class="btn" id="menu-toggle">Menu</button>
+            {% block chatbar %}{% endblock %}
         </nav>
 
         <div class="container-fluid">
@@ -59,47 +38,40 @@
 
 </div>
 
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<!--    <a class="navbar-brand" href="#">{{ config['SITE_TITLE'] }}</a>-->
-<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
-<!--            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--        <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-
-<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--        <ul class="navbar-nav mr-auto">-->
-<!--            {% for item in navbar %}-->
-<!--            {% if item.sublinks %}-->
-<!--            <li class="nav-item dropdown">-->
-<!--                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"-->
-<!--                   aria-haspopup="true" aria-expanded="false">-->
-<!--                    {{ item.text }}-->
-<!--                </a>-->
-<!--                <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                    {% for sublink in item.sublinks %}-->
-<!--                    <a class="dropdown-item" href="{{ sublink.url }}">{{ sublink.text }}</a>-->
-<!--                    {% endfor %}-->
-<!--                </div>-->
-<!--            </li>-->
-<!--            {% elif item.url %}-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="{{ item.url }}">{{ item.text }}</a>-->
-<!--            </li>-->
-<!--            {% endif %}-->
-<!--            {% endfor %}-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--</nav>-->
 {% block body %}
 {% endblock %}
 </body>
 
 
-
 <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
+    document.addEventListener('DOMContentLoaded', function () {
+        const wrapper = document.getElementById('wrapper');
+        const sidebar = document.getElementById('sidebar-wrapper');
+        const menuToggle = document.getElementById('menu-toggle');
+
+        // Check the sidebar state on page load
+        if (localStorage.getItem('sidebarState') === 'toggled') {
+            wrapper.classList.add('toggled');
+
+        }
+
+        // Toggle the sidebar and save the state in local storage
+        menuToggle.addEventListener('click', function (e) {
+            e.preventDefault();
+            wrapper.classList.toggle('toggled');
+            wrapper.classList.add('no-transition');
+            if (wrapper.classList.contains('toggled')) {
+                localStorage.setItem('sidebarState', 'toggled');
+            } else {
+                localStorage.removeItem('sidebarState');
+            }
+        });
+
+
+        // Remove the no-transition class after the page has loaded
+        window.addEventListener('load', function () {
+            wrapper.classList.remove('no-transition');
+        });
     });
 </script>
 </html>
